# ga_learn

./: .gitignore  README.md  environment.yml  flake8.sh  main.py  setup.cfg
data-set/: data_manip.py  y_test.npy  y_train.npy
p5/: index.html  sketch.js
src/: es.py  individual.py  main.py  pso.py  train.py
src/data-set/: data_manip.py
src/ga_learn/: es.py  individual.py  main.py  train.py
src/ga_learn/data-set/: data_manip.py  x_test.npy  x_train.npy
