[metadata]
name = ga_learning
author = Bayley King, Tyler Westland
author-email = king2b3@mail.uc.edu, westlatr@mail.uc.edu
url = https://github.com/squaresLab/Darjeeling
description = Distributed, language-independent, compositional search-based program repair
long-description = file: README.md, LICENSE
license = Apache License, Version 2.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.9
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 120
ignore = E266

[testenv]
commands =
  flake8 src
